# acs2500-notebooks

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: action.yml
appstore/: App_Store_Data_Analysis.ipynb
final/: README.md  final.ipynb  generate.py
matplotlib/: [ACS_2500]_CHALLENGE_Engineering_Visualizations_with_MatPlotLib.ipynb
penguins/: penguins.ipynb
titanic/: exploring_the_titanic.ipynb
tutorials/: Normal_Distributions_and_the_Central_Limit_Theorem.ipynb
